--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>index</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="home.css">
+    <script src="home.js" type="module" defer></script>
+    <title>밈장고</title>
 </head>
 <body>
-<h1>is Index !</h1>
+    <div class="homeContainer">
+        <h1 class="title">밈장고</h1>
+        <div class="logoContainer">
+            <a href="/main"><img alt="failed to load images" width="200px" height="200px" id="mainLogo"></a>
+        </div>
+    </div>
 </body>
 </html>
