[추가]main.html 및 css 기초 레이아웃 추가

--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -10,9 +10,9 @@
     <title>밈장고</title>
 </head>
 <body>
-    <div class="homeContainer">
+    <div class="home-container">
         <h1 class="title">밈장고</h1>
-        <div class="logoContainer">
+        <div class="logo-ontainer">
             <a href="/main"><img alt="failed to load images" width="200px" height="200px" id="mainLogo"></a>
         </div>
     </div>
