--- a/src/views/main/main.html
+++ b/src/views/main/main.html
@@ -12,14 +12,50 @@
     
 </head>
 <body>
+    <!-- navigation bar -->
     <div id="nav-placeholder"></div>
     <script>
         $(document).ready(function () {
             $('#nav-placeholder').load('../nav/nav.html');
         });
     </script>
+    <!-- navigation bar --> 
     <h1>Hello</h1>
     
+    <div id="content-continer" class="container is-max-widescreen">
+        <div class="row">
+            <div class="content">
+                <img class="content-img" src="../images/pepe despair.jpg">
+                <p>페페의 절규가 담겼습니다</p>
+            </div>
+            <div class="content">
+                <img class="content-img" src="../images/pepe despair.jpg">
+                <p>페페의 절규가 담겼습니다</p>
+            </div>
+            <div class="content">
+                <img class="content-img" src="../images/pepe despair.jpg">
+                <p>페페의 절규가 담겼습니다</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="content">
+                <img class="content-img" src="../images/sadpepe.png">
+                <p>페페의 슬픔이 담겼군요</p>
+            </div>
+            <div class="content">
+                <img class="content-img" src="../images/pepe despair.jpg">
+                <p>페페의 절규가 담겼습니다</p>
+            </div>
+            <div class="content">
+                <img class="content-img" src="../images/sadpepe.png">
+                <p>페페의 슬픔이 담겼군요</p>
+            </div>
+        </div>
+        <div class="row"></div>
+    </div>
+
+
+    <!-- footer -->
     <div id="footer-placeholder"></div>
     <script>
         $(function () {
