--- a/src/views/main/main.html
+++ b/src/views/main/main.html
@@ -14,15 +14,9 @@
 <body>
     <!-- navigation bar -->
     <div id="nav-placeholder"></div>
-    <script>
-        $(document).ready(function () {
-            $('#nav-placeholder').load('../nav/nav.html');
-        });
-    </script>
-    <!-- navigation bar --> 
-    <h1>Hello</h1>
+
     
-    <div id="content-continer" class="container is-max-widescreen">
+    <div id="content-container" class="container is-max-widescreen">
         <div class="row">
             <div class="content">
                 <img class="content-img" src="../images/pepe despair.jpg">
@@ -57,10 +51,14 @@
 
     <!-- footer -->
     <div id="footer-placeholder"></div>
-    <script>
-        $(function () {
-            $('#footer-placeholder').load('../footer/footer.html');
-        });
-    </script>
+
+    
 </body>
+<!-- load nav, footer -->
+<script>
+    $(document).ready(function () {
+        $('#nav-placeholder').load('../nav/nav.html');
+        $('#footer-placeholder').load('../footer/footer.html');
+    });
+</script>
 </html>
