--- a/src/views/nav/nav.html
+++ b/src/views/nav/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar is-transparent">
     <div class="navbar-brand">
-      <a class="navbar-item" href="https://google.com">
+      <a class="navbar-item" href="http://localhost:3000/main/">
         <img src="../images/fridge.svg" alt="failed to load images" width="80" height="150">
       </a>
       <div class="navbar-burger" data-target="navbarExampleTransparentExample">
@@ -10,42 +10,7 @@
       </div>
     </div>
   
-    <div id="main-navbar" class="navbar-menu">
-      <div class="navbar-start">
-        <a class="navbar-item" href="https://bulma.io/">
-          Home
-        </a>
-        <div class="navbar-item has-dropdown is-hoverable">
-          <a class="navbar-link" href="https://bulma.io/documentation/overview/start/">
-            Docs
-          </a>
-          <div class="navbar-dropdown is-boxed">
-            <a class="navbar-item" href="https://bulma.io/documentation/overview/start/">
-              Overview
-            </a>
-            <a class="navbar-item" href="https://bulma.io/documentation/overview/modifiers/">
-              Modifiers
-            </a>
-            <a class="navbar-item" href="https://bulma.io/documentation/columns/basics/">
-              Columns
-            </a>
-            <a class="navbar-item" href="https://bulma.io/documentation/layout/container/">
-              Layout
-            </a>
-            <a class="navbar-item" href="https://bulma.io/documentation/form/general/">
-              Form
-            </a>
-            <hr class="navbar-divider">
-            <a class="navbar-item" href="https://bulma.io/documentation/elements/box/">
-              Elements
-            </a>
-            <a class="navbar-item is-active" href="https://bulma.io/documentation/components/breadcrumb/">
-              Components
-            </a>
-          </div>
-        </div>
-      </div>
-  
+    <div id="main-navbar" class="navbar-menu">    
       <div class="navbar-end">
         <div class="navbar-item">
           <div class="field is-grouped">
