--- a/src/views/detail/detail.html
+++ b/src/views/detail/detail.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <title>Detail</title>
 
-    <script src="detail.js"></script>
+    <script src="detail.js" type="module"></script>
     <link rel="stylesheet" href="detail.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"/>
     <link rel="stylesheet" href="../footer/footer.css"
@@ -17,6 +17,8 @@
 
     <div id="content-container" class="container is-widescreen">
         <img src="/images/smoking pepe.png">
+
+    <p id="test">ㅎㅇㅎㅇ</p>
     </div>
 
     
