[추가]컨텐츠 라우터, 컨텐츠 서비스, 컨텐츠 모델 추가(미완), main.html,js,css 수정 및 컨텐츠라우터 연동

--- a/src/views/detail/detail.html
+++ b/src/views/detail/detail.html
@@ -16,9 +16,9 @@
 
 
     <div id="content-container" class="container is-widescreen">
-        <img src="/images/smoking pepe.png">
+        <img id ='detail-img'src="/images/smoking pepe.png">
 
-    <p id="test">ㅎㅇㅎㅇ</p>
+    <p id="detail-desc">ㅎㅇㅎㅇ</p>
     </div>
 
     
