--- a/src/views/main/main.html
+++ b/src/views/main/main.html
@@ -3,10 +3,10 @@
     <meta charset="UTF-8">
     <title>밈장고</title>
 
-    <script src="main.js"></script>
+    <script src="main.js" type="module"></script>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"/>
-    <link rel="stylesheet" href="../footer/footer.css"
+    <link rel="stylesheet" href="../footer/footer.css">
     <script src="../nav/nav.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     
@@ -16,36 +16,7 @@
     <div id="nav-placeholder"></div>
 
     
-    <div id="content-container" class="container is-max-widescreen">
-        <div class="row">
-            <div class="content">
-                <img class="content-img" src="../images/pepe despair.jpg">
-                <p>페페의 절규가 담겼습니다</p>
-            </div>
-            <div class="content">
-                <img class="content-img" src="../images/pepe despair.jpg">
-                <p>페페의 절규가 담겼습니다</p>
-            </div>
-            <div class="content">
-                <img class="content-img" src="../images/pepe despair.jpg">
-                <p>페페의 절규가 담겼습니다</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="content">
-                <img class="content-img" src="../images/sadpepe.png">
-                <p>페페의 슬픔이 담겼군요</p>
-            </div>
-            <div class="content">
-                <img class="content-img" src="../images/pepe despair.jpg">
-                <p>페페의 절규가 담겼습니다</p>
-            </div>
-            <div class="content">
-                <img class="content-img" src="../images/sadpepe.png">
-                <p>페페의 슬픔이 담겼군요</p>
-            </div>
-        </div>
-        <div class="row"></div>
+    <div id="content-container" class="container is-widescreen">
     </div>
 
 
