--- a/src/views/nav/nav.html
+++ b/src/views/nav/nav.html
@@ -15,22 +15,22 @@
         <div class="navbar-item">
           <div class="field is-grouped">
             <p class="control">
-              <a class="bd-tw-button button" data-social-network="Twitter" data-social-action="tweet" data-social-target="https://bulma.io" target="_blank" href="https://twitter.com/intent/tweet?text=Bulma: a modern CSS framework based on Flexbox&amp;hashtags=bulmaio&amp;url=https://bulma.io&amp;via=jgthms">
+              <a class="button is-white">
                 <span class="icon">
-                  <i class="fab fa-twitter"></i>
+                  <i class="fas fa-user"></i>
                 </span>
                 <span>
-                  추가하기
+                  로그인
                 </span>
               </a>
             </p>
             <p class="control">
-              <a class="button is-primary" href="https://github.com/jgthms/bulma/releases/download/0.9.4/bulma-0.9.4.zip">
+              <button class="button is-white" id= 'content-upload-modal-button' data-target="content-upload-modal">
                 <span class="icon">
-                  <i class="fas fa-download"></i>
+                  <i class="fas fa-plus"></i>
                 </span>
-                <span>다운로드하기</span>
-              </a>
+                <span>추가하기</span>
+              </button>
             </p>
           </div>
         </div>
