--- a/src/views/content-modal/content-modal.html
+++ b/src/views/content-modal/content-modal.html
@@ -2,7 +2,7 @@
   <div class="modal-background"></div>
     <div class="modal-card">
       <header class="modal-card-head">
-        <p class="modal-card-title">컨텐츠 종류 선택</p>
+        <p class="modal-card-title" style="text-align: center;">컨텐츠 등록하기</p>
         <button class="delete" aria-label="close"></button>
       </header>
       <section class="modal-card-body">
@@ -10,19 +10,23 @@
         <div class="content-upload">
             <form class="box content-upload-form" enctype="multipart/form-data">
                 <div class="field">
-                    <label class="label" for="content-name">
-                      <p>사진업로드</p>
-                      <input type="file" id="content-name" name="src" accept=".png, .jpeg, .jpg">
-                    </label>                    
+                  <label class="label" for="content-img">
+                    <p>사진업로드</p>
+                    <input type="file" id="content-img" name="src" accept=".png, .jpeg, .jpg">
+                  </label>                    
                 </div>
                 <div class="field">
-                  <label class="label" for="content-type"></label>
-                  <p>ㅎㅇㅎㅇ</p>
-              </div>
-              <div class="field">
-                <label class="label" for="content-desc"></label>
-                  <p>ㅎㅇㅎㅇ</p>
-              </div>
+                  <label class="label" for="content-name">
+                    <p>제목</p>
+                      <input type="text" id="content-name" name="name">
+                  </label>
+                </div>
+                <div class="field">
+                  <label class="label" for="content-desc">
+                    <p>설명</p>
+                      <input type="text" id="content-desc" name="desc">
+                  </label>
+                </div>
               <button class="button is-success">업로드</button>
             </form>
         </div>
