--- a/src/views/nav/nav.html
+++ b/src/views/nav/nav.html
@@ -1,7 +1,7 @@
 <nav class="navbar is-transparent">
     <div class="navbar-brand">
       <a class="navbar-item" href="http://localhost:3000/main/">
-        <img src="../images/fridge.svg" alt="failed to load images" width="80" height="150">
+        <img src="/images/fridge.svg" alt="failed to load images" width="80" height="150">
       </a>
       <div class="navbar-burger" data-target="navbarExampleTransparentExample">
         <span></span>
