--- a/src/views/main/main.html
+++ b/src/views/main/main.html
@@ -2,12 +2,10 @@
 <head>
     <meta charset="UTF-8">
     <title>밈장고</title>
-    <script src="main.js" type="module"></script>
-    
-    <link rel="stylesheet" href="main.css">
+    <script src="/main/main.js" type="module"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"/>
-    <link rel="stylesheet" href="../footer/footer.css">
-    <script src="../nav/nav.js"></script>
+    <link rel="stylesheet" href="/footer/footer.css">
+    <script src="/nav/nav.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     
@@ -23,9 +21,10 @@
     <div id="content-modal-placeholder"></div>
 </body>
 <script>
-    $('#content-modal-placeholder').load('../content-modal/content-modal.html');
-    $('#nav-placeholder').load('../nav/nav.html');
-    $('#footer-placeholder').load('../footer/footer.html');
+    $('#content-modal-placeholder').load('/content-modal/content-modal.html');
+    $('#nav-placeholder').load('/nav/nav.html');
+    $('#footer-placeholder').load('/footer/footer.html');
 </script>
-<script src="../content-modal/content-modal.js" type="module" defer></script>
+<script src="/content-modal/content-modal.js" type="module" defer></script>
+<link rel="stylesheet" href="/main/main.css">
 </html>
