[수정]html, css 변경을 통한 html 레이아웃 변경

--- a/src/views/detail/detail.html
+++ b/src/views/detail/detail.html
@@ -2,9 +2,8 @@
 <head>
     <meta charset="UTF-8">
     <title>상세보기 페이지</title>
-
-    <script src="detail.js" type="module"></script>
-    <link rel="stylesheet" href="/detail/datail.css">
+    <script src="../detail/detail.js" type="module"></script>
+    <link rel="stylesheet" href="../detail/detail.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"/>
     <link rel="stylesheet" href="/footer/footer.css">
     <script src="/nav/nav.js"></script>
@@ -18,8 +17,7 @@
     <!-- content detail -->
     <div id="content-container" class="container is-widescreen">
         <img id ='detail-img'>
-
-    <p id="detail-desc">ㅎㅇㅎㅇ</p>
+        <p id="detail-desc"></p>
     </div>
 
     <!-- footer -->
