[추가]content-title 데이터 뷰에 추가

--- a/src/views/detail/detail.css
+++ b/src/views/detail/detail.css
@@ -1,6 +1,14 @@
 #content-container{
     text-align: center;
+    margin-top: 80px;
 }
+
+#detail-title{
+    margin-bottom: 20px;
+    font-size: 20px;
+}
+
 img{
-    max-width: 200px;
+    max-width: 500px;
+    max-height: 500px;
 }
