--- a/src/views/detail/detail.html
+++ b/src/views/detail/detail.html
@@ -16,6 +16,7 @@
 
     <!-- content detail -->
     <div id="content-container" class="container is-widescreen">
+        <h1 id="detail-title"></h1>
         <img id ='detail-img'>
         <p id="detail-desc"></p>
     </div>
