[추가]Rank-content-container, all-content-container로 분리

--- a/src/views/main/main.html
+++ b/src/views/main/main.html
@@ -14,7 +14,18 @@
     <!-- navigation bar -->
     <div id="nav-placeholder"></div>    
     
-    <div id="content-container" class="container is-widescreen"></div>
+    <div class="main-page-container">
+        <div id="content-container" class="container is-widescreen">
+            <div id="rank-content-container">
+                <div id="rank-content-title-box" class="box">실시간 랭킹 컨텐츠</div>
+                <div id="rank-contents"></div>
+            </div>
+            <div id="all-content-container">
+                <div id="all-content-title-box" class="box">전체 컨텐츠</div>
+                <div id="all-contents"></div>
+            </div>
+        </div>
+    </div>
     <!-- footer -->
     <div id="footer-placeholder"></div>
     <!-- content modal -->
