[수정]불필요한 코드 제거

--- a/src/views/nav/nav.html
+++ b/src/views/nav/nav.html
@@ -1,13 +1,8 @@
-<nav class="navbar is-transparent">
+<nav class="navbar has-shadow is-transparent is-primary">
     <div class="navbar-brand">
       <a class="navbar-item" href="http://localhost:3000/main/">
         <img src="/images/fridge.svg" alt="failed to load images" width="80" height="150">
       </a>
-      <div class="navbar-burger" data-target="navbarExampleTransparentExample">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
     </div>
   
     <div id="main-navbar" class="navbar-menu">    
@@ -15,7 +10,7 @@
         <div class="navbar-item">
           <div class="field is-grouped">
             <p class="control">
-              <a class="button is-white">
+              <a class="button is-dark">
                 <span class="icon">
                   <i class="fas fa-user"></i>
                 </span>
