--- a/src/views/main/main.css
+++ b/src/views/main/main.css
@@ -1,24 +1,44 @@
 .row{
     display: flex;
-    margin-left: 1vh;
-    margin-right: 1vh;
 }
 
 .container{
-    margin-top: 80px;
+    margin-top: 100px;
 }
+
+#rank-content-container{
+    width: 80%;
+    margin: auto;
+    margin-bottom : 6%;
+}
+
+#rank-content-title-box{
+    font-size: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#all-content-container{
+    width: 80%;
+    margin: auto;
+}
+
 .content{
     text-align: center;
-    margin-left: auto;
-    margin-right: 20px;
+    margin: auto
 }
 
 .content-img{
-    width: 230px;
+    max-width: 230px;
     height: 230px;
     object-fit: cover;
+    border: 1px solid #eeeeee;
+    border-radius: 7px;
 }
 
+img{
+    vertical-align: middle;
+}
 a{
     color: inherit;
 }
