[수정] desc - > tag로 수정. 공백을 기준으로 각 태그들을 분리 후 추가

--- a/src/views/detail/detail.css
+++ b/src/views/detail/detail.css
@@ -1,14 +1,18 @@
-#content-container{
-    text-align: center;
-    margin-top: 80px;
+#content-container {
+  text-align: center;
+  margin-top: 80px;
 }
 
-#detail-title{
-    margin-bottom: 20px;
-    font-size: 20px;
+#detail-title {
+  margin-bottom: 20px;
+  font-size: 20px;
 }
 
-img{
-    max-width: 500px;
-    max-height: 500px;
+img {
+  max-width: 450px;
+  max-height: 450px;
+}
+span{
+  margin-left: 2px;
+  margin-right: 2px;
 }
