--- a/src/views/nav/nav.html
+++ b/src/views/nav/nav.html
@@ -1,16 +1,22 @@
-<nav class="navbar has-shadow is-transparent is-primary">
+<nav class="navbar has-shadow is-transparent">
     <div class="navbar-brand">
-      <a class="navbar-item" href="http://localhost:3000/main/">
-        <img src="/images/fridge.svg" alt="failed to load images" width="80" height="150">
+      <a class="navbar-item" href="http://localhost:3000/main/" id="main-logo-container">
+        <img src="/images/fridge.svg" alt="failed to load images" width="100%">
       </a>
     </div>
-  
+
     <div id="main-navbar" class="navbar-menu">    
+
+      <form id="search">
+        <input class="input is-primary is-focused" type="text" placeholder="검색">
+        <button class="button is-secondary" type="submit">검색</button>
+      </form>
+
       <div class="navbar-end">
-        <div class="navbar-item">
+        <div class="navbar-item is-hoverable">
           <div class="field is-grouped">
             <p class="control">
-              <a class="button is-dark">
+              <a class="button is-dark" id="user-button">
                 <span class="icon">
                   <i class="fas fa-user"></i>
                 </span>
