[추가] 뷰에 nav.css 불러오기 추가

--- a/src/views/main/main.html
+++ b/src/views/main/main.html
@@ -38,4 +38,5 @@
 </script>
 <script src="/content-modal/content-modal.js" type="module" defer></script>
 <link rel="stylesheet" href="/main/main.css">
+<link rel="stylesheet" href="/nav/nav.css">
 </html>
