--- a/src/views/sign-up/sign-up.html
+++ b/src/views/sign-up/sign-up.html
@@ -69,4 +69,5 @@
     $('#footer-placeholder').load('/footer/footer.html');
 </script>
 <script src="/content-modal/content-modal.js" type="module" defer></script>
+<link rel="stylesheet" href="/nav/nav.css">
 </html>
