[수정]메인화면에서 컨텐츠 제목 제거, 태그를 이미지 하단에 겹처서 표시

--- a/src/views/main/main.css
+++ b/src/views/main/main.css
@@ -6,6 +6,11 @@
     margin-top: 100px;
 }
 
+.main-page-container{
+    align-items: center;
+    align-content: center;
+}
+
 #rank-content-container{
     width: 80%;
     margin: auto;
@@ -19,17 +24,18 @@
 }
 
 #all-content-container{
-    width: 80%;
     margin: auto;
+    max-width: 980px;
 }
 
 .content{
     text-align: center;
-    margin: auto
+    padding: 10px;
+    margin-bottom: 1.5rem;
 }
 
 .content-img{
-    max-width: 230px;
+    width: 230px;
     height: 230px;
     object-fit: cover;
     border: 1px solid #eeeeee;
@@ -41,4 +47,12 @@ img{
 }
 a{
     color: inherit;
+}
+
+.content-tags{
+    position: absolute; 
+    bottom: 5%;
+    left: 50%; 
+    transform: translate( -50%, -50% ); 
+    display: flex;
 }
