--- a/src/views/nav/nav.html
+++ b/src/views/nav/nav.html
@@ -13,26 +13,27 @@
       </form>
 
       <div class="navbar-end">
-        <div class="navbar-item is-hoverable">
-          <div class="field is-grouped">
-            <p class="control">
-              <a class="button is-dark" id="user-button">
-                <span class="icon">
-                  <i class="fas fa-user"></i>
-                </span>
-                <span>
-                  로그인
-                </span>
-              </a>
-            </p>
-            <p class="control">
-              <button class="button is-white" id= 'content-upload-modal-button' data-target="content-upload-modal">
-                <span class="icon">
-                  <i class="fas fa-plus"></i>
-                </span>
-                <span>추가하기</span>
-              </button>
-            </p>
+        <div class="navbar-item">
+          <p class="control">
+            <button class="button is-white" id= 'content-upload-modal-button' data-target="content-upload-modal">
+              <span class="icon">
+                <i class="fas fa-plus"></i>
+              </span>
+              <span>추가하기</span>
+            </button>
+          </p>
+        </div>
+        <div class="navbar-item has-dropdown is-hoverable" id="auth">
+          <a class="navbar-link">
+            <span class="icon">
+              <i class="fas fa-user"></i>
+            </span>
+            <span>
+              회원
+            </span>
+          </a>
+          <div class="navbar-dropdown">
+            
           </div>
         </div>
       </div>
