[추가]뷰에 nav.js 추가

--- a/src/views/sign-up/sign-up.html
+++ b/src/views/sign-up/sign-up.html
@@ -70,4 +70,5 @@
 </script>
 <script src="/content-modal/content-modal.js" type="module" defer></script>
 <link rel="stylesheet" href="/nav/nav.css">
+<script src="/nav/nav.js" type="module" defer></script>
 </html>
