[추가]로그인 여부에 따라, 내비게이션 바의 회원 드롭다운의 내용 변경

--- a/src/views/nav/nav.html
+++ b/src/views/nav/nav.html
@@ -23,7 +23,7 @@
             </button>
           </p>
         </div>
-        <div class="navbar-item has-dropdown is-hoverable" id="auth">
+        <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link">
             <span class="icon">
               <i class="fas fa-user"></i>
@@ -32,7 +32,7 @@
               회원
             </span>
           </a>
-          <div class="navbar-dropdown">
+          <div class="navbar-dropdown" id="navbar-auth">
             
           </div>
         </div>
