--- a/src/views/nav/nav.html
+++ b/src/views/nav/nav.html
@@ -32,7 +32,7 @@
               회원
             </span>
           </a>
-          <div class="navbar-dropdown" id="navbar-auth">
+          <div class="navbar-dropdown is-right" id="navbar-auth">
             
           </div>
         </div>
