--- a/src/views/main/main.html
+++ b/src/views/main/main.html
@@ -28,15 +28,55 @@
     <!-- footer -->
     <div id="footer-placeholder"></div>
     <!-- content modal -->
-    <div id="content-modal-placeholder"></div>
+    <div id="content-modal-placeholder">
+        <div id="content-upload-modal" class="modal">
+            <div class="modal-background"></div>
+              <div class="modal-card">
+                <header class="modal-card-head">
+                  <p class="modal-card-title" style="text-align: center;">컨텐츠 등록하기</p>
+                  <button class="delete" aria-label="close"></button>
+                </header>
+                <section class="modal-card-body">
+                  <!-- Content ... -->
+                  <div class="content-upload">
+                      <form class="box content-upload-form" enctype="multipart/form-data">
+                          <div class="field">
+                            <label class="label" for="content-img">
+                              <p>사진업로드</p>
+                              <input type="file" id="content-img" name="src" accept=".png, .jpeg, .jpg">
+                            </label>                    
+                          </div>
+                          <div class="field">
+                            <label class="label" for="content-name">
+                              <p>제목</p>
+                                <input type="text" id="content-name" name="name">
+                            </label>
+                          </div>
+                          <div class="field">
+                            <label class="label" for="content-desc">
+                              <p>설명</p>
+                                <input type="text" id="content-desc" name="desc">
+                            </label>
+                          </div>
+                        <button class="button is-success">업로드</button>
+                      </form>
+                  </div>
+                </section>
+                <footer class="modal-card-foot">
+                  
+                  <button class="button">취소</button>
+                </footer>
+            </div>
+          </div>
+    </div>
+
+    <script>
+        $('#nav-placeholder').load('/nav/nav.html');
+        $('#footer-placeholder').load('/footer/footer.html');
+    </script>
+    <script src="/content-modal/content-modal.js" type="module"></script>
+    <link rel="stylesheet" href="/main/main.css">
+    <script src="/nav/nav.js" type="module"></script>
+    <link rel="stylesheet" href="/nav/nav.css">
 </body>
-<script>
-    $('#content-modal-placeholder').load('/content-modal/content-modal.html');
-    $('#nav-placeholder').load('/nav/nav.html');
-    $('#footer-placeholder').load('/footer/footer.html');
-</script>
-<script src="/content-modal/content-modal.js" type="module" defer></script>
-<link rel="stylesheet" href="/main/main.css">
-<script src="/nav/nav.js" type="module" defer></script>
-<link rel="stylesheet" href="/nav/nav.css">
 </html>
