[수정]innerStyle 제거, 태그 css 수정

--- a/src/views/main/main.css
+++ b/src/views/main/main.css
@@ -56,3 +56,12 @@ a{
     transform: translate( -50%, -50% ); 
     display: flex;
 }
+
+.content .content-tags .tag{
+    color: #ffffff;
+    border: 1px solid #cccccc;
+    border-radius: 10px;
+    font-weight: bold;
+    padding: 3px;
+    background-color: #2e6b6a;
+}
