[수정]search -> search-container로 rename

--- a/src/views/nav/nav.html
+++ b/src/views/nav/nav.html
@@ -7,7 +7,7 @@
 
     <div id="main-navbar" class="navbar-menu">    
 
-      <form id="search">
+      <form id="search-container">
         <input class="input is-primary is-focused" type="text" placeholder="검색">
         <button class="button is-secondary" type="submit">검색</button>
       </form>
