[수정]description -> tag로 수정

--- a/src/views/content-modal/content-modal.html
+++ b/src/views/content-modal/content-modal.html
@@ -22,9 +22,9 @@
                   </label>
                 </div>
                 <div class="field">
-                  <label class="label" for="content-desc">
-                    <p>설명</p>
-                      <input type="text" id="content-desc" name="desc">
+                  <label class="label" for="content-tag">
+                    <p>태그 </p>
+                      <input type="text" id="content-tag" name="tag">
                   </label>
                 </div>
               <button class="button is-success">업로드</button>
