--- a/src/views/detail/detail.html
+++ b/src/views/detail/detail.html
@@ -2,13 +2,14 @@
 <head>
     <meta charset="UTF-8">
     <title>상세보기 페이지</title>
-    <script src="../detail/detail.js" type="module"></script>
+    <script src="/detail/detail.js" type="module"></script>
     <link rel="stylesheet" href="../detail/detail.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"/>
     <link rel="stylesheet" href="/footer/footer.css">
-    <script src="/nav/nav.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <link rel="stylesheet" href="/nav/nav.css">
+    <script src="/nav/nav.js" type="module" defer></script>
 </head>
 <body>
     <!-- navigation bar -->
@@ -23,12 +24,8 @@
 
     <!-- footer -->
     <div id="footer-placeholder"></div>
-    
-</body>
-<script>
-    $('#nav-placeholder').load('/nav/nav.html');
+    <script>
     $('#footer-placeholder').load('/footer/footer.html');
-</script>
-<link rel="stylesheet" href="/nav/nav.css">
-<script src="/nav/nav.js" type="module" defer></script>
+    </script>
+</body>
 </html>
