--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" href="./login.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"/>
     <link rel="stylesheet" href="/footer/footer.css">
-    <script src="/nav/nav.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <script src="/nav/nav.js" type="module"></script>
+    <link rel="stylesheet" href="/nav/nav.css">
 </head>
 <body>
     <!-- navigation bar -->
@@ -48,13 +49,8 @@
 
     <!-- footer -->
     <div id="footer-placeholder"></div>
-
-    
+    <script>
+        $('#footer-placeholder').load('/footer/footer.html');
+    </script>
 </body>
-<script>
-    $('#nav-placeholder').load('/nav/nav.html');
-    $('#footer-placeholder').load('/footer/footer.html');
-</script>
-<link rel="stylesheet" href="/nav/nav.css">
-<script src="/nav/nav.js" type="module" defer></script>
 </html>
