[추가]로그인 유무에 따라 아이디, 패스워드 입력란 readonly로 변경. 비로그인 시 1회용 아이디로 아이디, 패스워드를 입력받음

--- a/src/views/content-add/content-add.html
+++ b/src/views/content-add/content-add.html
@@ -33,8 +33,18 @@
                 </div>
                 <div class="field">
                 <label class="label" for="content-tag">
-                    <p>태그 </p>
+                    <p>태그</p>
                     <input type="text" id="content-tag" name="tag">
+                </label>
+                <hr>
+                <h3 id="login-check"></h3>
+                <label class="label" for="content-uploader-name">
+                    <p>아이디</p>
+                    <input type="text" id="uploader-name" name="uploaderName">
+                </label>
+                <label class="label" for="content-uploader-password">
+                    <p>비밀번호</p>
+                    <input type="password" id="uploader-password" name="uploaderPassword">
                 </label>
             </div>
             <button class="button is-success">업로드</button>
