--- a/src/views/content-add/content-add.css
+++ b/src/views/content-add/content-add.css
@@ -2,3 +2,8 @@
     text-align: center;
     margin-top: 8%;
 }
+
+.content-upload-container #content-upload-form #image-preview{
+    margin-top: 50px;
+    width: 450px;
+}
