--- a/src/views/content-add/content-add.html
+++ b/src/views/content-add/content-add.html
@@ -24,14 +24,16 @@
                     <p>사진업로드</p>
                     <input type="file" id="content-img" name="src" accept=".png, .jpeg, .jpg">
                 </label>                    
-                </div>
-                <div class="field">
+                <img src="" id="image-preview">
+            </div>
+            
+            <div class="field">
                 <label class="label" for="content-name">
                     <p>제목</p>
                     <input type="text" id="content-name" name="name">
                 </label>
-                </div>
-                <div class="field">
+            </div>
+            <div class="field">
                 <label class="label" for="content-tag">
                     <p>태그</p>
                     <input type="text" id="content-tag" name="tag">
