--- a/src/views/nav/nav.html
+++ b/src/views/nav/nav.html
@@ -7,16 +7,19 @@
 
     <div id="main-navbar" class="navbar-menu">    
 
-      <form id="search-container">
-        <input class="input is-primary is-focused" id="search-input" type="text" placeholder="검색">
-        <button class="button is-secondary" id ="search-submit-button" type="submit">
-          <span class="icon">
-            <i class="fas fa-search"></i>
-          </span>
-        </button>
-      </form>
+      
 
       <div class="navbar-end">
+        <div class="navbar-item">
+          <form id="search-container">
+            <input class="input is-primary is-focused" id="search-input" type="text" placeholder="검색">
+            <button class="button is-secondary" id ="search-submit-button" type="submit">
+              <span class="icon">
+                <i class="fas fa-search"></i>
+              </span>
+            </button>
+          </form>
+        </div>
         <div class="navbar-item">
           <p class="control">
             <button class="button is-white" id='content-upload-button' onclick="location.href='/content-add/content-add.html'">
