--- a/src/views/detail/detail.html
+++ b/src/views/detail/detail.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>상세보기 페이지</title>
-    <script src="/detail/detail.js" type="module"></script>
+    <script src="./detail.js" type="module"></script>
     <link rel="stylesheet" href="../detail/detail.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"/>
     <link rel="stylesheet" href="/footer/footer.css">
