[추가]myPage 추가. 비로그인 상태에서 접근 시 alert로 경고, main으로 location

--- a/src/views/my-page/my-page.html
+++ b/src/views/my-page/my-page.html
@@ -15,11 +15,15 @@
     <!-- navigation bar -->
     <div id="nav-placeholder"></div>
 
-    <!-- content detail -->
-    <div id="content-container" class="container is-widescreen">
-        <h1 id="detail-title"></h1>
-        <img id ='detail-img'>
-        <p id="detail-desc"></p>
+    <div id="my-page-content-container" class="container is-widescreen">
+        <div class="my-page-info">
+            <h1 id="user-name"></h1>
+            <p id="user-email"></p>
+        </div>
+
+        <div id="my-page-content">
+            <h1 id="my-page-content-count"></h1>
+        </div>
     </div>
 
     <!-- footer -->
