[수정]비로그인 시 navbar의 회원 텍스트 = 로그인, 로그인 시 텍스트 -> 회원 으로 수정

--- a/src/views/nav/nav.html
+++ b/src/views/nav/nav.html
@@ -35,11 +35,11 @@
             <span class="icon">
               <i class="fas fa-user"></i>
             </span>
-            <span>
-              회원
+            <span id="navbar-user">
+              로그인
             </span>
           </a>
-          <div class="navbar-dropdown is-right" id="navbar-auth">
+          <div class="navbar-dropdown is-right" id="navbar-auth-dropdown">
             
           </div>
         </div>
