--- a/src/views/detail/detail.css
+++ b/src/views/detail/detail.css
@@ -16,3 +16,13 @@ span{
   margin-left: 2px;
   margin-right: 2px;
 }
+
+#detail-desc .tag{
+  color: #ffffff;
+  border: 1px solid #cccccc;
+  border-radius: 10px;
+  font-weight: bold;
+  font-size: 15px;
+  padding: 3px;
+  background-color: #2e6b6a;
+}
