[추가]detail 하단에 조회수 추가

--- a/src/views/detail/detail.html
+++ b/src/views/detail/detail.html
@@ -19,7 +19,13 @@
     <div id="content-container" class="container is-widescreen">
         <h1 id="detail-title"></h1>
         <img id ='detail-img'>
-        <p id="detail-desc"></p>
+        <div id="detail-desc"></div>
+        <div id="content-view-container">
+            <span class="icon">
+                <i class="far fa-eye"></i>
+            </span>
+            <span id="content-view"></span>
+        </div>
     </div>
 
     <!-- footer -->
