--- a/src/views/detail/detail.css
+++ b/src/views/detail/detail.css
@@ -17,6 +17,10 @@ span{
   margin-right: 2px;
 }
 
+#detail-desc{
+  margin-top: 2vh;
+}
+
 #detail-desc .tag{
   color: #ffffff;
   border: 1px solid #cccccc;
@@ -25,4 +29,8 @@ span{
   font-size: 15px;
   padding: 3px;
   background-color: #2e6b6a;
+}
+
+#content-view-container{
+  margin-top: 2vh;
 }
