[수정]css 수정, 컨텐츠 화면 중앙으로 오도록

--- a/src/views/detail/detail.html
+++ b/src/views/detail/detail.html
@@ -16,15 +16,17 @@
     <div id="nav-placeholder"></div>
 
     <!-- content detail -->
-    <div id="content-container" class="container is-widescreen">
-        <h1 id="detail-title"></h1>
-        <img id ='detail-img'>
-        <div id="detail-desc"></div>
-        <div id="content-view-container">
-            <span class="icon">
-                <i class="far fa-eye"></i>
-            </span>
-            <span id="content-view"></span>
+    <div id="detail-content-container" class="container is-widescreen">
+        <div id="content-container">
+            <h1 id="detail-title"></h1>
+            <img id ='detail-img'>
+            <div id="detail-desc"></div>
+            <div id="content-view-container">
+                <span class="icon">
+                    <i class="far fa-eye"></i>
+                </span>
+                <span id="content-view"></span>
+            </div>
         </div>
     </div>
 
