--- a/src/views/detail/detail.css
+++ b/src/views/detail/detail.css
@@ -1,6 +1,16 @@
+#detail-content-container{
+  display: flex;
+  align-items: center;
+  width: 100vh;
+  height: 80vh;
+}
+
 #content-container {
   text-align: center;
-  margin-top: 80px;
+  margin: 0 auto;
+  width: 100%;
+  height: 60%;
+  line-height: 60%;
 }
 
 #detail-title {
@@ -11,6 +21,7 @@
 img {
   max-width: 450px;
   max-height: 450px;
+  vertical-align: middle;
 }
 span{
   margin-left: 2px;
