--- a/src/views/search/search.html
+++ b/src/views/search/search.html
@@ -13,14 +13,12 @@
 <body>
     <!-- navigation bar -->
     <div id="nav-placeholder"></div>
-    
-    <div class="main-page-container">
-        <div id="content-container" class="container is-widescreen">
-            
-            <div id="all-content-container">
-                <div id="all-content-title-box" class="box">전체 컨텐츠</div>
-                <div id="all-contents"></div>
-            </div>
+
+    <!-- search contents -->
+    <div class="search-page-container" class="container is-widescreen">
+        <div id="all-content-title-box" class="box">전체 컨텐츠</div>
+        <div id="all-content-container">
+            <div id="all-contents"></div>
         </div>
     </div>
     <!-- footer -->
