--- a/src/views/main/main.html
+++ b/src/views/main/main.html
@@ -25,6 +25,7 @@
                 <div id="all-contents"></div>
             </div>
         </div>
+        <button class="button is-medium is-fullwidth">더 보기</button>
     </div>
     <!-- footer -->
     <div id="footer-placeholder"></div>
