[추가]offset을 통한 pagination 기능

--- a/src/views/main/main.html
+++ b/src/views/main/main.html
@@ -25,7 +25,7 @@
                 <div id="all-contents"></div>
             </div>
         </div>
-        <button class="button is-medium is-fullwidth">더 보기</button>
+        <button class="button is-medium is-fullwidth" id="offset-button">더 보기</button>
     </div>
     <!-- footer -->
     <div id="footer-placeholder"></div>
