--- a/src/views/content-add/content-add.css
+++ b/src/views/content-add/content-add.css
@@ -4,7 +4,7 @@
 }
 
 .content-upload-container #content-upload-form{
-    width: 25vw;
+    width: 30rem;
     margin: auto;
     margin-top: 5vh;
 }
