[수정]도메인명 삭제, 상대경로로 변경

--- a/src/views/nav/nav.html
+++ b/src/views/nav/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar has-shadow is-transparent">
     <div class="navbar-brand">
-      <a class="navbar-item" href="http://localhost:3000/main/" id="main-logo-container">
+      <a class="navbar-item" href="/main" id="main-logo-container">
         <img src="/images/fridge.svg" alt="failed to load images" width="100%">
       </a>
     </div>
