--- a/src/views/search/search.html
+++ b/src/views/search/search.html
@@ -16,7 +16,7 @@
 
     <!-- search contents -->
     <div class="search-page-container" class="container is-widescreen">
-        <div id="all-content-title-box" class="box">전체 컨텐츠</div>
+        <div id="all-content-title-box" class="box">검색 결과</div>
         <div id="all-content-container">
             <div id="all-contents"></div>
         </div>
