[수정]최근 조회된 컨텐츠의 태그 메인페이지 상단에 노출

--- a/src/views/main/main.css
+++ b/src/views/main/main.css
@@ -69,3 +69,23 @@ a{
     width: 20%;
     margin: auto;
 }
+
+#recent-tag-container{
+    margin: auto;
+    text-align: center;
+    max-width: 980px;
+}
+
+#recent-tag{
+    margin: 30px;
+    /* display: flex; */
+}
+
+
+#recent-tag-container #recent-tag .tag{
+    border: 1px solid #cccccc;
+    border-radius: 10px;
+    font-weight:bold;
+    padding: 10px;
+    margin: 2px;
+}
