--- a/src/views/main/main.html
+++ b/src/views/main/main.html
@@ -16,10 +16,14 @@
     
     <div class="main-page-container">
         <div id="content-container" class="container is-widescreen">
+            <div id="recent-tag-container">
+                <div id="recent-tag"></div>
+            </div>
             <div id="rank-content-container">
                 <div id="rank-content-title-box" class="box">실시간 랭킹 컨텐츠</div>
                 <div id="rank-contents"></div>
             </div>
+            
             <div id="all-content-container">
                 <div id="all-content-title-box" class="box">전체 컨텐츠</div>
                 <div id="all-contents"></div>
