--- a/src/views/nav/nav.css
+++ b/src/views/nav/nav.css
@@ -2,12 +2,18 @@
     margin-left: 1vh;
 }
 
+.search-section{
+    position: fixed;
+    top: 0;
+    right: 18vw;
+}
+
+
 #search-container{
     display: flex;
     margin-top: auto;
     margin-bottom: auto;
-    margin-left: auto;
-    margin-right: auto;
+    max-width: 30vw;
 }
 
 .navbar{
@@ -15,4 +21,8 @@
     top: 0;
     left: 0;
     right: 0;
+}
+
+body{
+    padding-top: 5px;
 }
